--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -20,9 +21,14 @@
 </head>
 
 <body>
-    <h1>Vijeta</h1><i class="fa-brands fa-instagram"></i>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ex voluptate ut. Magni quasi placeat eius dolores
-        perspiciatis explicabo officia nulla provident quos. Quisquam sunt velit iure, ullam fugit ut.</p>
+    <div class="hero">
+        <p>👋Hello I am</p>
+        <h1>Vijeta Singh</h1>
+        <h2 class="mb-3">Front-end developer based in London</h2>
+        <div>
+            <a href="" class="btn btn-branding">Contact me</a>
+        </div>
+    </div>
 </body>
 
 </html>
