--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio Learning">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -29,6 +30,158 @@
             <a href="" class="btn btn-branding">Contact me</a>
         </div>
     </div>
+    <div class="container">
+        <p class="text-center m-5 ">Featured Project which my best projects be choice to show.</p>
+        <div class="row mb-5">
+            <div class="col d-none d-md-block">
+                <img class="img-fluid" src="/images/yogurt.jpeg" alt="Yogurt Image" />
+            </div>
+            <div class="col">
+                <div class="project-description">
+                    <h2 class="mb-5">
+                        Yogurt Project
+                    </h2>
+                    <p class="mb-5 text-muted">
+                        Fermented milk in India is a reflection of the culture, traditions, and food habits of this
+                        country.
+                        They form an
+                        integral part of the daily meal of the people of India, Pakistan, Bangladesh, and some
+                        neighboring
+                        countries. Among the
+                        various fermented milk products, dahi, a lactic fermented milk product, is considered one of the
+                        oldest and widely
+                        consumed. It has a very close resemblance to yogurt and is popular by different names in
+                        different
+                        parts of India. Dahi
+                        is consumed as such or with the addition of sugar or salt. It is a nutritiously balanced food
+                        containing almost all the
+                        nutrients present in milk but in a more assimilable form. Its quality and shelf-life are largely
+                        defined by the type and
+                        quality of milk, quality and kind of starter culture used, and processing parameters such as
+                        heat
+                        treatment, incubation
+                        conditions, type of packaging, and storage conditions. It forms the base for the preparation of
+                        a
+                        number of other
+                        fermented products such as lassi, chhach, and shrikhand. Dahi and its related products are well
+                        recognized for their
+                        therapeutic properties, particularly in curing gastrointestinal disorders. Dahi has a number of
+                        nonfood applications
+                        related to traditional customs and beliefs. Additionally, it has been recognized for its
+                        cosmetic
+                        applications. The
+                        production of dahi and its related products is still largely confined to the unorganized Indian
+                        dairy sector and is
+                        considered a significant contributor to the economy of this sector. Recent decades saw the
+                        production and
+                        commercialization of dahi and its related products by the organized sector. Recent research
+                        works on
+                        dahi has
+                        increasingly focused on validating the nutritional and therapeutic benefits of dahi as well as
+                        its
+                        value addition
+                        through incorporation of functional ingredients such as probiotics.
+                    </p><a href="#" class="btn btn-branding-outline">Learn more...</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="project-description">
+                        <h2 class="mb-5">
+                            Weather Project
+                        </h2>
+                        <p class="mb-5 text-muted">
+                            The United States is about to embark on an experiment inspired by one of the New Deal’s
+                            most popular programs. On
+                            Wednesday, the Biden administration authorized the creation of the American Climate Corps
+                            through an
+                            executive order.
+                            The program would hire 20,000 young people in its first year, putting them to work
+                            installing
+                            wind
+                            and
+                            solar projects,
+                            making homes more energy-efficient, and restoring ecosystems like coastal wetlands to
+                            protect
+                            towns
+                            from
+                            flooding.
+
+                            The idea has been in the works for years. It was first announced in President Joe Biden’s
+                            early
+                            days
+                            in
+                            the White House
+                            in January 2021, tucked into a single paragraph in an executive order on tackling the
+                            climate
+                            crisis. At
+                            the time, it
+                            was called the Civilian Climate Corps — a reference to President Franklin D. Roosevelt’s
+                            Civilian
+                            Conservation Corps,
+                            launched in 1933 to help the country survive the Great Depression, which was responsible for
+                            building
+                            hundreds of parks,
+                            including Great Smoky Mountains National Park, as well as many hiking trails and lodges you
+                            can
+                            find
+                            across the country
+                            today. Early versions of Biden’s trademark climate law that passed last year, the Inflation
+                            Reduction
+                            Act, included
+                            money for reviving the CCC. But that funding got cut during negotiations last summer with
+                            Senator
+                            Joe
+                            Manchin, a
+                            Democrat from West Virginia, and the program was assumed dead.</p>
+                        <p><a href="#" class="btn btn-branding-outline">Learn more...</a></p>
+                    </div>
+                </div>
+                <div class="col d-none d-md-block"><img class="img-fluid" src="/images/weather.jpeg"
+                        alt="Weather Image" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col d-none d-md-block">
+                    <img class="img-fluid" src="/images/yoga.jpeg" alt="Yoga Image" />
+                </div>
+                <div class="col">
+                    <div class="project-description">
+                        <h2 class="mb-5">
+                            Yoga Project
+                        </h2>
+                        <p class="mb-5 text-muted">
+                            Yoga is a group of physical, mental, and spiritual practices or disciplines which originated
+                            in
+                            ancient India and aim to control (yoke)
+                            and still the mind,
+                            recognizing a detached witness-consciousness untouched by the mind (Chitta) and mundane
+                            suffering (Duḥkha). There is a
+                            wide variety of schools of yoga, practices, and goals in Hinduism, Buddhism, and
+                            Jainism,and traditional
+                            and modern yoga is practiced worldwide.
+
+                            Yoga-like practices were first mentioned in the ancient Hindu text known as Rigveda. Yoga is
+                            referred to in a number
+                            of the Upanishads. The first known appearance of the word "yoga" with the same meaning
+                            as the modern term is
+                            in the Katha Upanishad,which was probably composed between the fifth and third
+                            centuries BCE. Yoga
+                            continued to develop as a systematic study and practice during the fifth and sixth centuries
+                            BCE
+                            in ancient India's
+                            ascetic and Śramaṇa movements.The most comprehensive text on Yoga, the Yoga Sutras of
+                            Patanjali, date to the early
+                            centuries of the Common Era; Yoga philosophy became known as one of the six
+                            orthodox philosophical
+                            schools (Darśanas) of Hinduism in the second half of the first millennium CE.Hatha
+                            yoga texts began to
+                            emerge between the ninth and 11th centuries, originating in tantra.</p>
+                        <p><a href="#" class="btn btn-branding-outline">Learn more...</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
