--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
 </head>
 
 <body>
-    <div class="about-section container mt-5">
+    <div class="content-container container mt-5">
         <div class="row ms-5 me-5">
             <div class="col-lg-6">
-                <div class="about-section-content">
+                <div class="content">
                     <h1 class="mb-4">Hi I am Vijeta Singh</h1>
                     <h2 class="mb-4">Frontend Developer based in London</h2>
                     <p class="mb-4">
