--- a/about.html
+++ b/about.html
@@ -22,6 +22,17 @@
 </head>
 
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <img class="logo d-none d-md-block" src="/images/logo.png">
+            <ul>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="content-container container mt-5">
         <div class="row ms-5 me-5">
             <div class="col-lg-6">
