--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 </head>
 
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-between">
+            <img class="logo d-none d-md-block" src="/images/logo.png">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
     <div class="hero">
         <p>👋Hello I am</p>
         <h1>Vijeta Singh</h1>
