--- a/contact.html
+++ b/contact.html
@@ -43,6 +43,19 @@
             <h3>Instagram</h3>
             <p><a href="https://www.instagram.com/vijeta" target="_blank">@vijeta</a></p>
         </div>
+        <div class="container text-center">
+            <footer class="footer">
+                <div class="contact-box d-flex d-none d-md-block justify-content-between mb-5">
+                    <div>
+                        <h4>Work Inquiry</h4>
+                        <p class="text-muted">Let's work together</p>
+                    </div>
+                    <div>
+                        <a href="" class="btn btn-branding">Contact me</a>
+                    </div>
+                </div>
+            </footer>
+        </div>
     </div>
 </body>
 
