--- a/work.html
+++ b/work.html
@@ -60,7 +60,31 @@
                 </div>
             </div>
         </div>
+        <div class="container text-center">
+            <footer class="footer">
+                <div class="contact-box d-flex d-none d-md-block justify-content-between mb-5">
+                    <div>
+                        <h4>Work Inquiry</h4>
+                        <p class="text-muted">Let's work together</p>
+                    </div>
+                    <div>
+                        <a href="" class="btn btn-branding">Contact me</a>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center mb-5">
+                    <a href="mailto:vijeta@gmail.com" class="text-decoration-none text-dark">vijeta@gmail.com</a>
+                </div>
+                <div class="social-link d-flex justify-content-center">
 
+                    <a href="https://www.facebook.com/vijeta" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+
+                    <a href="https://www.twitter.com/vijeta" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+
+                    <a href="https://www.instagram.com/vijeta" target="_blank"><i
+                            class="fa-brands fa-square-instagram"></i></a>
+                </div>
+            </footer>
+        </div>
     </div>
 </body>
 
