--- a/about.html
+++ b/about.html
@@ -26,14 +26,14 @@
         <nav class="d-flex justify-content-between">
             <img class="logo d-none d-md-block" src="/images/logo.png">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="work.html">Work</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/index.html" title="Home">Home</a></li>
+                <li><a href="/about.html" title="About Vijeta">About</a></li>
+                <li><a href="/work.html" title="Vijeta's Work">Work</a></li>
+                <li><a href="/contact.html" title="Contact Vijeta">Contact</a></li>
             </ul>
         </nav>
     </div>
-    <div class="content-container container mt-5">
+    <div class="content-container container">
         <div class="row ms-5 me-5">
             <div class="col-lg-6">
                 <div class="content">
@@ -46,7 +46,7 @@
                         portfolio
                     </p>
 
-                    <a href="#" class="btn-branding">View all projects</a>
+                    <a href="/work.html" class="btn-branding">View all projects</a>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -60,7 +60,7 @@
                             <p class="text-muted">Let's work together</p>
                         </div>
                         <div>
-                            <a href="" class="btn btn-branding">Contact me</a>
+                            <a href="/contact.html" target="_blank" class="btn btn-branding">Contact me</a>
                         </div>
                     </div>
                     <div class="d-flex justify-content-center mb-5">
