--- a/contact.html
+++ b/contact.html
@@ -26,20 +26,20 @@
         <nav class="d-flex justify-content-between">
             <img class="logo d-none d-md-block" src="/images/logo.png">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="work.html">Work</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/index.html" title="Home">Home</a></li>
+                <li><a href="/about.html" title="About Vijeta">About</a></li>
+                <li><a href="/work.html" title="Vijeta's Work">Work</a></li>
+                <li><a href="/contact.html" title="Contact Vijeta">Contact</a></li>
             </ul>
         </nav>
     </div>
-    <div class="content-container container mt-5">
+    <div class="content-container container">
         <div class="contact-content text-center">
             <h1 class="mb-5">Let's get in touch!</h1>
             <h3>Email</h3>
-            <p><a href="mailto:">vijeta@gmail.com</a></p>
+            <p><a href="mailto:vijeta@gmail.com">vijeta@gmail.com</a></p>
             <h3>Twitter</h3>
-            <p><a href="https://www.twitter.com/vijeta" target="_blank">vijeta</a></p>
+            <p><a href="https://www.twitter.com/vijeta" target="_blank">@vijeta</a></p>
             <h3>Instagram</h3>
             <p><a href="https://www.instagram.com/vijeta" target="_blank">@vijeta</a></p>
         </div>
@@ -51,7 +51,7 @@
                         <p class="text-muted">Let's work together</p>
                     </div>
                     <div>
-                        <a href="" class="btn btn-branding">Contact me</a>
+                        <a href="mailto:vijeta@gmail.com" class="btn btn-branding">Contact me</a>
                     </div>
                 </div>
             </footer>
