--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio Learning">
+    <meta name="description" content="Vijeta is a frontend developer based in London">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -18,18 +18,18 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/styles/portfolio.css" />
     <script src="https://kit.fontawesome.com/653f12c83b.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Frontend Developer Vijeta</title>
 </head>
 
 <body>
     <div class="container">
         <nav class="d-flex justify-content-between">
-            <img class="logo d-none d-md-block" src="/images/logo.png">
+            <img class="logo d-none d-md-block" src="/images/logo.png" alt="Logo Image">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="work.html">Work</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/index.html" title="Home">Home</a></li>
+                <li><a href="/about.html" title="About Vijeta">About</a></li>
+                <li><a href="/work.html" title="Vijeta's Work">Work</a></li>
+                <li><a href="/contact.html" title="Contact Vijeta">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -38,7 +38,7 @@
         <h1>Vijeta Singh</h1>
         <h2 class="mb-3">Front-end developer based in London</h2>
         <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding" title="Contact me">Contact me</a>
         </div>
     </div>
     <div class="container">
@@ -92,7 +92,8 @@
                         its
                         value addition
                         through incorporation of functional ingredients such as probiotics.
-                    </p><a href="#" class="btn btn-branding-outline">Learn more...</a>
+                    </p>
+                    <p><a href="/work.html#yogurt-block" class="btn btn-branding-outline">Learn more...</a></p>
                 </div>
             </div>
             <div class="row">
@@ -145,7 +146,9 @@
                             Joe
                             Manchin, a
                             Democrat from West Virginia, and the program was assumed dead.</p>
-                        <p><a href="#" class="btn btn-branding-outline">Learn more...</a></p>
+                        <p>
+                            <a href="/work.html#weather-block" class="btn btn-branding-outline">Learn more...</a>
+                        </p>
                     </div>
                 </div>
                 <div class="col d-none d-md-block"><img class="img-fluid" src="/images/weather.jpeg"
@@ -188,7 +191,7 @@
                             schools (Darśanas) of Hinduism in the second half of the first millennium CE.Hatha
                             yoga texts began to
                             emerge between the ninth and 11th centuries, originating in tantra.</p>
-                        <p><a href="#" class="btn btn-branding-outline">Learn more...</a></p>
+                        <p><a href="/work.html#yoga-block" class="btn btn-branding-outline">Learn more...</a></p>
                     </div>
                 </div>
             </div>
@@ -208,15 +211,17 @@
                     </div>
                     <div class="social-link d-flex justify-content-center">
 
-                        <a href="https://www.facebook.com/vijeta" target="_blank"><i
-                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/vijeta" target="_blank">
+                            <i class="fa-brands fa-facebook" title="facebook"></i></a>
 
-                        <a href="https://www.twitter.com/vijeta" target="_blank"><i
-                                class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.twitter.com/vijeta" target="_blank">
+                            <i class="fa-brands fa-twitter" title="twitter"></i></a>
 
-                        <a href="https://www.instagram.com/vijeta" target="_blank"><i
-                                class="fa-brands fa-square-instagram"></i></a>
+                        <a href="https://www.instagram.com/vijeta" target="_blank">
+                            <i class="fa-brands fa-square-instagram" title="instagram"></i></a>
                     </div>
+                    <p class="mt-4">✌️This project was coded by Vijeta and it is <a
+                            href="https://github.com/vijetarajput/PortfolioMaking" target="_blank">open-sourced.</a></p>
                 </footer>
             </div>
         </div>
