--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About Portfolio">
+    <meta name="description" content="About Work">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -18,7 +18,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/styles/portfolio.css" />
     <script src="https://kit.fontawesome.com/653f12c83b.js" crossorigin="anonymous"></script>
-    <title>About me</title>
+    <title>Vijeta's Work</title>
 </head>
 
 <body>
@@ -26,35 +26,35 @@
         <nav class="d-flex justify-content-between">
             <img class="logo d-none d-md-block" src="/images/logo.png">
             <ul>
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="work.html">Work</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/index.html" title="Home">Home</a></li>
+                <li><a href="/about.html" title="About Vijeta">About</a></li>
+                <li><a href="/work.html" title="Vijeta's Work">Work</a></li>
+                <li><a href="/contact.html" title="Contact Vijeta">Contact</a></li>
             </ul>
         </nav>
     </div>
-    <div class="content-container container mt-5">
+    <div class="content-container container">
         <div class="content">
             <h1 class="mb-5">Take a look at what I've been working on!</h1>
             <div class="row">
-                <div class="col-md-6 mb-4">
+                <div id="yogurt-block" class="col-md-6 mb-4">
                     <img class="img-fluid mb-3 border rounded" src="/images/yogurt.jpeg" /><br />
-                    <!-- <a href="#" alt="Yogurt Image">Check out the details...</a> -->
+
                     <h3 class="text-center m-0">Yogurt Project</h3>
                     <p class="text-center text-muted">Built with HTML and CSS.</p>
                 </div>
 
-                <div class="col-md-6 mb-4">
-                    <img class="img-fluid mb-3 border rounded" src="/images/weather.jpeg" style="height:470px" /><br />
-                    <!-- <a href="#" alt="Yogurt Image">Check out the details...</a> -->
+                <div id="weather-block" class="col-md-6 mb-4">
+                    <img class="img-fluid mb-3 border rounded" src="/images/weather.jpeg" style="height:478px" /><br />
+
                     <h3 class="text-center m-0">Weather Project</h3>
                     <p class="text-center text-muted">Built with HTML, CSS and Javascript</p>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 mb-4">
+                <div id="yoga-block" class="col-md-6 mb-4">
                     <img class="img-fluid mb-3 border rounded" src="/images/yoga.jpeg" style="height:470px" /><br />
-                    <!-- <a href="#" alt="Yogurt Image">Check out the details...</a> -->
+
                     <h3 class="text-center m-0">yoga Project</h3>
                     <p class="text-center text-muted">Built with HTML and CSS.</p>
                 </div>
